<resources>
    <string name="app_name">mStock</string>
    <string name="web_client_id">187171630072-l6k6qm152vaf9arhmvdkr097h842dd86.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_with_google">Log-in with Google</string>
    <string name="google_icon_day">Google Icon (Day)</string>
    <string name="search_bar">Search</string>
    <string name="searchbar_hint">Search Here</string>
    <string name="extended_fab_label">Read Barcode</string>
    <string name="product_name_sample">PRODUCT NAME SAMPLE</string>
    <string name="ean_1234567891234">ean - 1234567891234</string>
    <string name="quantity_111">quantity - 111</string>
    <string name="scan_barcode">SCAN BARCODE</string>
    <string name="product_name">PRODUCT NAME</string>
    <string name="ean">EAN</string>
    <string name="serial_no">SERIAL NO</string>
    <string name="quantity">QUANTITY</string>
    <string name="desi">DESI</string>
    <string name="price">PRICE</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>
    <string name="delete_product">DELETE PRODUCT</string>
    <string name="date_of_create">DATE OF CREATE</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login_register">login/register</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="description">Description</string>
</resources>